# patchwaste

./: .gitignore  CONTRIBUTING.md  README.md  index.html
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_behaviors.rs
crates/core/: Cargo.toml
crates/core/src/: baseline.rs  lib.rs  report.rs
crates/core/src/parser/: steampipe_log.rs
docs/: ANNOUNCEMENT.md  FAQ.md  copy.md  design.md  development.md  monetisation.md  open-core-scope.md  opencore.md  proprietary-deployment.md  release-notes-v0.1.0.md  release-template.md  release-v0.1.md  roadmap.md  tutorial-canonical-example.md
docs/launch/: 14-day-plan.md  distribution.md  release-v0.1.0.md  show-hn.md  social-posts.md
docs/plans/: 2026-02-04-v0.1-hardening-design.md  2026-02-05-launch-collateral-and-tutorial-plan.md  2026-02-05-open-core-launch-plan.md  2026-02-05-release-templates-faq-and-audience-docs-plan.md
